--- a/index.html
+++ b/index.html
@@ -44,6 +44,42 @@ Group of Architects
                    <button class="btn-primary">Explore More</button>
               </div>
              </section>
+
+             <section class="features-box">
+              <div class="column-1">
+                <h2 class="col1-title">Features you will love & enjoy</h2>
+              <p class="col1-p">There are many variations of passages of Lorem Ipsum available,
+                but the majority have 
+                suffered alteration in some form, by injected humour, 
+                or randomised words which don't look even</p>
+                <div class="box">
+                  <h6 class="box-title">Dexktop & Mobile Version</h6>
+                  <p class="box-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, 
+                    by injected humour, or randomised...........</p>
+                </div>
+                <div class="box">
+                  <h6 class="box-title">Drag & Drop Builder</h6>
+                  <p class="box-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+                     by injected humour, or randomised...........</p>
+                </div>
+                <div class="box">
+                  <h6 class="box-title">Awesome Modern Design</h6>
+                  <p class="box-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, 
+                    by injected humour, or randomised...........</p>
+                </div>
+                <div class="box">
+                  <h6 class="box-title">Super Easy to Edit</h6>
+                  <p class="box-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, 
+                    by injected humour, or randomised...........</p>
+                </div>
+              </div>
+              <div class="column-2">
+                <img class="architect-img" src="images/architect.png" alt="">
+                  <button class="btn-primary badge "><span class="year">10+Year</span> <span class="experience">Experience</span></button>
+              
+              </div>
+
+             </section>
              </main>
 
              
