fact+card section added

--- a/index.html
+++ b/index.html
@@ -76,10 +76,36 @@ Group of Architects
               <div class="column-2">
                 <img class="architect-img" src="images/architect.png" alt="">
                   <button class="btn-primary badge "><span class="year">10+Year</span> <span class="experience">Experience</span></button>
-              
               </div>
-
              </section>
+
+            <section>
+              <h2 class="fact-title">Some Facts</h2>
+              <p class="dark-2">There are many variations of passages of Lorem Ipsum available,
+                <br> but the majority have suffered alteration.</p>
+                <div class="cards">
+                  <div class="card">
+                    <img src="images/icons/ribon.png"alt="">
+                    <p class="card-number dark-2">54</p>
+                    <p class="card-text dark-3">Award winings</p>
+                  </div>
+                  <div class="card">
+                    <img src="images/icons/projects.png"alt="">
+                    <p class="card-number dark-2">1458</p>
+                    <p class="card-text dark-3">Project finished</p>
+                  </div>
+                  <div class="card">
+                    <img src="images/icons/customers.png"alt="">
+                    <p class="card-number dark-2">590</p>
+                    <p class="card-text dark-3">Clients Worked</p>
+                  </div>
+                  <div class="card">
+                    <img src="images/icons/email.png"alt="">
+                    <p class="card-number dark-2">22578</p>
+                    <p class="card-text dark-3">Email Send</p>
+                  </div>              
+                </div>
+            </section>
              </main>
 
              
