sponsor and footer added

--- a/index.html
+++ b/index.html
@@ -106,6 +106,24 @@ Group of Architects
                   </div>              
                 </div>
             </section>
+
+            <section>
+              <div class="sponsors">
+                <h1 class="sponsor-title">Our Spponsors</h1>
+                <p class="sponsor-text dark-3">There are many variations of passages of Lorem Ipsum available, but <br>the majority have suffered alteration.</p>
+                <div class="sponsor-images">
+                  <img src="images/sponsors/spotify.png" alt="">
+                  <img src="images/sponsors/google.png" alt="">
+                  <img src="images/sponsors/amazon.png" alt="">
+                  <img src="images/sponsors/telerama.png" alt="">
+                  <img src="images/sponsors/figma.png" alt=" ">
+                </div>
+              </div>
+            </section>
+
+            <footer>
+              <p class="footer dark-2">All rights reserved copyright@2023 startup landing page design</p>
+            </footer>
              </main>
 
              
